# bentomark-2

./: .gitignore  CMakeLists.txt  README.md  bentomark.tape
.github/workflows/: cmake-single-platform.yml  codeql.yml
libs/algebra/include/: matrix.hpp  vector.hpp
libs/algebra/src/: matrix.cpp  vector.cpp
libs/cli/include/: error_printer.hpp  solution_printer.hpp
libs/cli/src/: error_printer.cpp  solution_printer.cpp
libs/inputs/include/: input.hpp  matrix_input.hpp  number.hpp  vector.hpp
libs/inputs/src/: matrix.cpp  matrix_input.cpp  number.cpp  number_input.cpp  vector.cpp  vector_input.cpp
libs/inspector/include/: number_validator.hpp  validator.hpp
libs/inspector/src/: number_validator.cpp  validator.cpp
libs/models/include/: Model_Result.hpp  gauss_jacobi.hpp  gauss_seidel.hpp  matrix.hpp  model.hpp  vector.hpp
libs/models/src/: Model_Result.cpp  gauss_jacobi.cpp  gauss_seidel.cpp  matrix.cpp  model.cpp  vector.cpp
src/: main.cpp
test/: jacobi.cpp  matrix.cpp  matrix_input.cpp  number_input.cpp  number_input_test.cpp  number_validator.cpp  seidel.cpp  vector_input.cpp  vector_input_test.cpp
